--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,40 @@ h1 {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    background-color: #d4d4d4;
+    align-items: center;
+    padding: 30px;
+    margin-left: 150px;
+    margin-right: 150px;
+    border-radius: 30px;
+}
+
+.input-fields{
+    background-color: lightyellow;
+    padding: 10px;
+    border-radius: 5px;
+    border: darkgrey, 3px;
+
+}
+
+.login-button{
+    background-color: #008000;
+    color: white;
+}
+
+.login-button:hover{
+    background-color: #006600;
+}
+
+.forgot-password{
+    color: #004080;
+    text-decoration: none;
+}
+
+.forgot-password:hover{
+    text-decoration: underline;
+}
