--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,35 @@ h1 {
 .forgot-password:hover{
     text-decoration: underline;
 }
+
+.term-selection{
+    background-color: lightyellow;
+    border-radius: 5px;
+    padding: 5px;
+    align-self: center;
+}
+
+.course-tile{
+    background-color: lightblue;
+    padding: 20px;
+    margin: 15px;
+    border-radius: 10px;
+}
+
+.accept-button{
+    background-color: #4Caf50;
+    color: white;
+}
+
+.accept-button:hover{
+    background-color: #265e28;
+}
+
+.decline-button{
+    background-color: #d32f2f;
+    color: white;
+}
+
+.decline-button:hover{
+    background-color: #821b1b;
+}
