--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,20 @@ h2 {
 
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 
 .login-button{
     background-color: #008000;
     color: white;
+    margin: 20px 10px 10px 10px;
+    padding: 10px;
+    border-radius: 3px;
     
 }
 
@@ -90,6 +99,7 @@ h2 {
     background-color: transparent; 
     color: #004080;
     text-decoration: none;
+    margin-bottom: 20px;
 }
 
 .forgot-password:hover{
@@ -158,6 +168,11 @@ ul li {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+}
+
+.quiz_explaination{
+    background-color: lightblue;
+    width: 70%;
 }
 
 
