--- a/styles.css
+++ b/styles.css
@@ -118,8 +118,10 @@ h2 {
     padding: 20px;
     margin: 15px;
     border-radius: 10px;
-    border-radius: 2px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
+
 
 .accept-button{
     background-color: #4Caf50;
