--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,13 @@ h2 {
     align-items: center;
 }
 
+.container2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
 
 
 .login-button{
@@ -107,11 +114,13 @@ h2 {
 }
 
 .term-selection{
+    align-self: center;
     background-color: lightyellow;
     border-radius: 5px;
     padding: 5px;
-    align-self: center;
 }
+
+
 
 .course-tile{
     background-color: lightblue;
@@ -120,7 +129,6 @@ h2 {
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
-
 
 
 .accept-button{
