--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,13 @@
 h1 {
     margin-right: 0;
     margin-left: auto;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 h2 {
     color: #004080;
     text-align: center;
+
     /*padding: 20px;*/
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar{
@@ -30,7 +29,6 @@ h2 {
 .navbar-item{
     color: white;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -43,14 +41,12 @@ h2 {
     text-align: center;
     padding: 20px;
     /*margin: 20px;*/
-    font-family: Arial, Helvetica, sans-serif;
 }
 .footer{
     background-color: #004080;
     padding: 10px;
     color: white;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .login-form{
@@ -118,6 +114,7 @@ h2 {
     background-color: lightyellow;
     border-radius: 5px;
     padding: 5px;
+    margin-top: 30px;
 }
 
 
@@ -176,7 +173,6 @@ ul li {
     margin-left: 250px;
     margin-right: 250px;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
